--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
@@ -263,12 +263,12 @@
                 <div class="section-heading title-black color-dark text-left">
                     <h2>Register</h2>
                 </div>
-                <div class="custom-form">
+                <form class="custom-form">
                     <input id="guestName" placeholder="Name" type="text" class="custom-input" required />
                     <input id="guestPhone" placeholder="Phone" type="tel" class="custom-input" required />
                     <input id="guestEmail" placeholder="E-mail" type="email" class="custom-input" required />
                     <button id="btn-submit">Register <span class="fa fa-chevron-right"></span></button>
-                </div>
+                </form>
             </div>
         </section>
         <!-- Pricing Plan Area End Here -->
