--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Activity/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Activity/Index.cshtml
@@ -119,8 +119,8 @@
     </div>
 </div>
 
-        </div>
-<div class="box-body">
+
+@*<div class="box-body">
     <table class="table table-hover table-bordered" id="tblActivity">
         <thead>
             <tr>
@@ -132,11 +132,8 @@
             </tr>
         </thead>
     </table>
-</div>
-    </div>
-</div>
-</div>
-</div>
+</div>*@
+
 
 <!-- Modal -->
 <div id="modalUpdateActivity" class="modal fade" role="dialog">
@@ -309,8 +306,6 @@
                         }
                     });
                 });
-
-
         }
 
         function reloadTable() {
